[package]
name = "vproxy"
version = "0.1.7"
edition = "2021"
authors = ["gngppz@gmail.com"]
description = "Random IPv6 request proxy"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/gngpp/vproxy"
repository = "https://github.com/gngpp/vproxy"

[dependencies]
base64 = "0.22.0"
cidr = "0.2.2"
thiserror = "1.0.56"
hyper = { version = "1.1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1.35.1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
rand = "0.8.5"
bytes = "1.5.0"
pin-project-lite = "0.2.13"
http = "1.0.0"
clap = { version = "4.4.14", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
self_update = { version = "0.40.0", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }

# allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.5.4", optional = true }
mimalloc = { version = "0.1.39", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.5.5"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.27.1", features = ["user", "signal"] }

[features]
default = []
http = []
https = []
socks5 = []
# Enable jemalloc for binaries
jemalloc = ["jemallocator"]
# Enable bundled tcmalloc
tcmalloc = ["tcmalloc/bundled"]
# Enable snmalloc for binaries
snmalloc = ["snmalloc-rs"]
# Enable bundled rpmalloc
rpmalloc = ["dep:rpmalloc"]
# Enable mimalloc for binaries
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
